@@ -6,6 +6,7 @@
     var main            = global.cloudcmd.main,
         mainpackage     = main.mainpackage,
         exec            = main.child_process.exec,
+        Util            = main.util,
         DIR             = main.DIR;
     
     exports.get = function(){
@@ -25,7 +26,8 @@
      * @param pStdout
      * @param pStderr
      */
-    function pull(pError, pStdout, pStderr){
+    function pull(pError, pStdout, pStderr){        
+        var lExec;
         
         if(!pError){
             pStderr = '';
@@ -37,13 +39,17 @@
             console.log(DIR);
             if(mainpackage)
                 pStdout = 'Version ' + mainpackage.version + '\n' + pStdout;
-        }
+            
+            lExec = {
+                stdout : pStdout,
+                stderr : pStderr || pError
+            };
+        }else
+            lExec = 'install git to get auto updates (works for cloned versinons)\n' +
+                    'git clone http://github.com/coderaiser/cloudcmd';
         
-        var lExec = {
-            stdout : pStdout,
-            stderr : pStderr || pError
-        };
         
-        console.log(lExec);    
+        
+        Util.log(lExec);
     }
 })();
